--- a/managed-namespaces/base/vm-normal-user.yaml
+++ b/managed-namespaces/base/vm-normal-user.yaml
@@ -6,6 +6,8 @@ metadata:
   annotations:
     # Ensures that this resource will be applied after the namespace
     argocd.argoproj.io/sync-wave: "0"
+  labels:
+    kubevirt.io: ""
 rules:
   # Console access
   - apiGroups: ["subresources.kubevirt.io"]
