--- a/managed-namespaces/overlays/project-virtual-vm/kustomization.yaml
+++ b/managed-namespaces/overlays/project-virtual-vm/kustomization.yaml
@@ -17,3 +17,10 @@ patches:
     - op: replace
       path: /metadata/name
       value: project-virtual-vm
+- target:
+    kind: Role
+    namespace: for-replacement
+  patch: |-
+    - op: replace
+      path: /metadata/namespace
+      value: project-virtual-vm
