--- a/managed-namespaces/overlays/project-virtual-vm/role.yaml
+++ b/managed-namespaces/overlays/project-virtual-vm/role.yaml
@@ -7,7 +7,7 @@ roleRef:
   # The role being bound
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: kubevirt.io:view
+  name: edit
 subjects:
   - kind: User
     name: foo
