--- a/managed-namespaces/base/vm-normal-user.yaml
+++ b/managed-namespaces/base/vm-normal-user.yaml
@@ -9,7 +9,17 @@ metadata:
   labels:
     kubevirt.io: ""
 rules:
-  # Console access
+
+  # Generic: namespace access
+  - apiGroup:
+      - ""
+    resources:
+      - namespaces
+    verbs:
+      - get
+      - list
+
+  # Virt: Console access
   - apiGroups:
       - subresources.kubevirt.io
     resources:
@@ -18,7 +28,7 @@ rules:
     verbs:
       - get
 
-  # VM Power on/off
+  # Virt: VM Power on/off
   - apiGroups: 
       - kubevirt.io
     resources:
@@ -28,7 +38,7 @@ rules:
     verbs:
       - update
 
-  # Snapshot & restore
+  # Virt: Snapshot & restore
   - apiGroups:
       - snapshot.kubevirt.io
     resources:
