fix: added permissions for snapshots

--- a/managed-namespaces/base/vm-normal-user.yaml
+++ b/managed-namespaces/base/vm-normal-user.yaml
@@ -59,3 +59,13 @@ rules:
       - watch
       - create
       - delete
+  
+  # Virt: native Kubernetes resources for snapshot
+  - apiGroups:
+    - snapshot.storage.k8s.io
+    resources:
+    - volumesnapshots
+    verbs:
+    - get
+    - list
+    - watch
