fix: added permissions for snapshots

--- a/managed-namespaces/base/vm-normal-user.yaml
+++ b/managed-namespaces/base/vm-normal-user.yaml
@@ -60,11 +60,13 @@ rules:
       - create
       - delete
   
-  # Virt: native Kubernetes resources for snapshot
+  # Virt: native Kubernetes CSI resources for snapshot
   - apiGroups:
     - snapshot.storage.k8s.io
     resources:
     - volumesnapshots
+    - volumesnapshotcontents
+    - volumesnapshotclasses
     verbs:
     - get
     - list
